Added a second collection to the project
